name:                mortar
version:             0.1.0.0
synopsis:            Alternative architecture for `brick` terminal applications
description:         Please see README.md
homepage:            http://github.com/mattjbray/mortar#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Bray
maintainer:          mattjbray@gmail.com
copyright:           2016 Matthew Bray
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mortar
  build-depends:       base >= 4.7 && < 5
                     , brick >= 0.4.1
                     , data-default >= 0.5.3
                     , transformers >= 0.4.2.0
                     , vty >= 5.4.0
  default-language:    Haskell2010

test-suite mortar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mortar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattjbray/mortar
